# lc3

./: .gitignore  Makefile.am  README.md  TODO.md  assemble.c  configure.ac  exec.c  execute.c  interactive.c  lc3.h  lc3as.c  lc3as.h  lc3diff.c  lc3vm.c  machine.c  machine.h  main.c  parse.y  parser.y  print.c  print.h  program.c  program.h  scan.l  scanner.l  util.c  util.h  vm.c
.github/workflows/: distcheck.yml
test/: 2048.asm.test  2048.disasm.test  2048.pretty.expect  2048.pretty.test  2048.sh  2048.sym  all-instructions.asm  all-instructions.pretty.test  all-instructions.sh  all-instructions.sym  asm-2048.test  gammut.asm.test  gammut.disasm.test  gammut.pretty.expect  gammut.pretty.test  gammut.sym  hello-world.sh  hello.asm  hello.asm.test  hello.disasm.test  hello.interactive.test  hello.pretty.expect  hello.pretty.test  hello.sym  inst_to_bits.c  interactive-hello.out  interactive-hello.sh  operations.c  pretty-2048.sh  pretty-all-instructions.test  pretty-rogue.sh  pretty-rogue.test  rogue.asm.test  rogue.disasm.test  rogue.pretty.expect  rogue.pretty.test  rogue.sh  rogue.sym  run-hello.test  unescape_string.c  (+7 more)
tests/: inst_to_bits.c  operations.c
